[package]
name = "idats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
base64 = "0.13.0"
utf8-read = "0.4.0"
byteorder = "1.4.3"

libm = "0.2.5"
plotters = "0.3.4"
fast-float = "0.2.0"
