[package]
name = "SNP Genotyping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
byteorder = "1.4.3"
csv = "1.1.6"

libm = "0.2.5"
plotters = "0.3.4"
fast-float = "0.2.0"

linfa = "0.6.0"
linfa-clustering = "0.6.0"
ndarray-csv = "0.5.1"
ndarray = "0.15.6"
rand = "0.8.5"
